tests/fixtures/errors/match_char_arm.z
# E0100: a char-literal arm on a numeric subject -- the subject is not a
# union/variant/generic, so the match is rejected cleanly instead of emitting
# invalid C (`case 0cA:`).
main: function is {
    c: 65.u8
    match (c) case 0cA then print "A" else print "o"
}
